# miniconcrexit-tutorial

./: .gitignore  README.md  pyproject.toml
.devcontainer/: devcontainer.json
website/: manage.py
website/miniconcrexit/: asgi.py  settings.py  urls.py  views.py  wsgi.py
website/miniconcrexit/static/css/: main.css
website/miniconcrexit/templates/: base.html  index.html
website/reimbursements/: admin.py  apps.py  models.py  urls.py  views.py
website/reimbursements/migrations/: 0001_initial.py
website/reimbursements/templates/reimbursements/: create.html  index.html
