[tool.poetry]
name = "miniconcrexit"
version = "0.1.0"
description = "Small and unintimidating version of concrexit, for new people to try out."
authors = ["Thalia Technicie <www@thalia.nu>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.2.5"
django-bootstrap5 = "^23.3"


[tool.poetry.group.dev.dependencies]
black = "^23.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
